--- a/SurgerySimulator/Assembly-CSharp.csproj
+++ b/SurgerySimulator/Assembly-CSharp.csproj
@@ -113,6 +113,8 @@
      <Compile Include="Assets\ChestSocketControllerLeft.cs" />
      <Compile Include="Assets\CuttingControllerForHeart.cs" />
      <Compile Include="Assets\Counter.cs" />
+     <Compile Include="Assets\HeartGravity.cs" />
+     <Compile Include="Assets\BonusTime.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
