--- a/SurgerySimulator/Assembly-CSharp.csproj
+++ b/SurgerySimulator/Assembly-CSharp.csproj
@@ -140,6 +140,7 @@
      <Compile Include="Assets\Scripts\Kidney\KidneyGravity.cs" />
      <Compile Include="Assets\Scripts\Heart\CuttingControllerForHeart.cs" />
      <Compile Include="Assets\Scripts\Heart\Counter.cs" />
+     <Compile Include="Assets\Scripts\Kidney\GutsSocketController.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
